# Athlete-Dashboard

./: .dockerignore  .gitignore  .mypy.ini  .ruff.toml  Dockerfile  Dockerfile.dbt  README.md  cloudbuild.dbt.yaml  cloudbuild.el.yaml  cloudbuild.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements-dbt.txt  requirements-dev.txt  requirements.txt  test_prompts.txt
.github/: dependabot.yml
.github/workflows/: ci-pipeline.yml  dbt.yml  deploy-jobs.yml  deploy.yml  workflow.yml
.streamlit/: secrets.toml
airflow/config/: airflow.cfg
airflow/dags/: gcp_cloud_run_pipeline.py  test_dag.py
config/: config.json
dbt/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt/macros/: map_discipline.sql
dbt/snapshots/: strava_activities.sql
dbt_athlete_dashboard/: dbt_project.yml  profiles.yml
dbt_athlete_dashboard/snapshots/: strava_activities.sql
docs/architecture/: architecture.md
docs/dbt/: dbt_guidelines.md  dbt_marts.md  (+7 more)
notebooks/: 01_exploring_strava.ipynb  01_strava_exploring.ipynb  02_gcp_exploring.ipynb  03_data_viz.ipynb  03_first_data_viz.ipynb  04_data_cleaning.ipynb  04_extract_load_dev.ipynb  04_strava_athlete_stats.ipynb  05_vertex_ai.ipynb  combination.ipynb  create_strava_docs.ipynb  data_exploring.ipynb  first_data_analysis.ipynb  gcp_exploring.ipynb  strava-api.ipynb  strava_route.html
src/: main.py  strava_utils.py  utils.py
terraform/: airflow.tf  bigquery.tf  cicd.tf  cloudbuild.tf  dbt_pipeline.tf  el_pipeline.tf  monitoring.tf  orchestration.tf  providers.tf  secrets.tf  variables.tf
tests/: example_tests.py
(+106 files in other folders)
