[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'athlete-dashboard'
version = '0.1.0'
requires-python = '>=3.9'

[tool.setuptools.packages.find]
include = ['src']

[tool.mypy]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["dashboard.utilities.google_api"]
disable_error_code = ["no-untyped-call"]